// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel base render correctly 1`] = `
<div>
  <div
    class="zs-carousel zs-carousel--horizontal"
  >
    <div
      class="zs-carousel__items"
    >
      <div
        class="zs-carousel__item"
      >
        0
      </div>
      <div
        class="zs-carousel__item"
      >
        1
      </div>
      <div
        class="zs-carousel__item"
      >
        2
      </div>
    </div>
    <div
      class="zs-carousel__pagination"
    >
      <div
        class="zs-carousel__pagination__item zs-carousel__pagination__item--active"
      />
      <div
        class="zs-carousel__pagination__item"
      />
      <div
        class="zs-carousel__pagination__item"
      />
    </div>
  </div>
  <div
    class="zs-carousel zs-carousel--horizontal"
  >
    <div
      class="zs-carousel__items"
    />
    <div
      class="zs-carousel__pagination"
    />
  </div>
  <div
    class="zs-carousel zs-carousel--horizontal"
  >
    <div
      class="zs-carousel__items"
    />
    <div
      class="zs-carousel__pagination"
    />
  </div>
  <div
    class="zs-carousel zs-carousel--horizontal"
  >
    <div
      class="zs-carousel__items"
    >
      <div
        class="zs-carousel__item"
      >
        0
      </div>
    </div>
    <div
      class="zs-carousel__pagination"
    >
      <div
        class="zs-carousel__pagination__item zs-carousel__pagination__item--active"
      />
    </div>
  </div>
</div>
`;

exports[`Carousel className render correctly 1`] = `
<div
  class="zs-carousel zs-wrapper-test zs-carousel--horizontal"
>
  <div
    class="zs-carousel__items"
  />
  <div
    class="zs-carousel__pagination"
  />
</div>
`;

exports[`Carousel componentWillReceiveProps 1`] = `
<div
  class="zs-carousel zs-carousel--horizontal"
>
  <div
    class="zs-carousel__items"
  >
    <div
      class="zs-carousel__item"
    >
      1
    </div>
    <div
      class="zs-carousel__item"
    >
      2
    </div>
  </div>
  <div
    class="zs-carousel__pagination"
  >
    <div
      class="zs-carousel__pagination__item"
    />
    <div
      class="zs-carousel__pagination__item zs-carousel__pagination__item--active"
    />
  </div>
</div>
`;

exports[`Carousel height render correctly 1`] = `
<div
  class="zs-carousel zs-carousel--vertical"
>
  <div
    class="zs-carousel__items"
    style="height:150px"
  >
    <div
      class="zs-carousel__item"
    >
      0
    </div>
    <div
      class="zs-carousel__item"
    >
      1
    </div>
    <div
      class="zs-carousel__item"
    >
      2
    </div>
  </div>
  <div
    class="zs-carousel__pagination"
  >
    <div
      class="zs-carousel__pagination__item zs-carousel__pagination__item--active"
    />
    <div
      class="zs-carousel__pagination__item"
    />
    <div
      class="zs-carousel__pagination__item"
    />
  </div>
</div>
`;

exports[`Carousel pagination render correctly 1`] = `
<div>
  <div
    class="zs-carousel zs-carousel--horizontal"
  >
    <div
      class="zs-carousel__items"
    >
      <div
        class="zs-carousel__item"
      >
        0
      </div>
      <div
        class="zs-carousel__item"
      >
        1
      </div>
      <div
        class="zs-carousel__item"
      >
        2
      </div>
    </div>
    <div
      class="zs-carousel__pagination"
    >
      <div
        class="zs-carousel__pagination__item zs-carousel__pagination__item--active"
      />
      <div
        class="zs-carousel__pagination__item"
      />
      <div
        class="zs-carousel__pagination__item"
      />
    </div>
  </div>
  <div
    class="zs-carousel zs-carousel--horizontal"
  >
    <div
      class="zs-carousel__items"
    >
      <div
        class="zs-carousel__item"
      >
        0
      </div>
      <div
        class="zs-carousel__item"
      >
        1
      </div>
      <div
        class="zs-carousel__item"
      >
        2
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel prefixCls render correctly 1`] = `
<div
  class="zs-test zs-test--horizontal"
>
  <div
    class="zs-test__items"
  >
    <div
      class="zs-test__item"
    >
      0
    </div>
  </div>
  <div
    class="zs-test__pagination"
  >
    <div
      class="zs-test__pagination__item zs-test__pagination__item--active"
    />
  </div>
</div>
`;

exports[`Carousel style render correctly 1`] = `
<div
  class="zs-carousel zs-carousel--horizontal"
  style="background:red"
>
  <div
    class="zs-carousel__items"
  />
  <div
    class="zs-carousel__pagination"
  />
</div>
`;

exports[`Carousel swipeable 1`] = `
<Carousel
  activeIndex={0}
  animationDuration={500}
  autoPlay={false}
  autoPlayIntervalTime={3000}
  direction="left"
  height={160}
  loop={false}
  moveDistanceRatio={0.5}
  moveTimeSpan={300}
  prefixCls="zs-carousel"
  showPagination={true}
  swipeable={false}
>
  <div
    className="zs-carousel zs-carousel--horizontal"
  >
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        className="zs-carousel__items"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        onTransitionEnd={[Function]}
        style={Object {}}
      >
        <div
          className="zs-carousel__item"
          key=".$0"
        >
          0
        </div>
        <div
          className="zs-carousel__item"
          key=".$1"
        >
          1
        </div>
        <div
          className="zs-carousel__item"
          key=".$2"
        >
          2
        </div>
      </div>
    </Drag>
    <div
      className="zs-carousel__pagination"
    >
      <div
        className="zs-carousel__pagination__item zs-carousel__pagination__item--active"
        key="pagination-0/.$0"
        onClick={[Function]}
      />
      <div
        className="zs-carousel__pagination__item"
        key="pagination-1/.$1"
        onClick={[Function]}
      />
      <div
        className="zs-carousel__pagination__item"
        key="pagination-2/.$2"
        onClick={[Function]}
      />
    </div>
  </div>
</Carousel>
`;
